--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -16,10 +16,15 @@
     justify-content: space-between;
     align-items: center;
     z-index: 1000;
+    padding: 1rem;
+}
+
+.title {
+    font-size: 3vw;
 }
 
 .pcUser {
-    width: 50%;
+    width: 40%;
     position: absolute;
     bottom: 5%;
     right: 0;
@@ -34,22 +39,12 @@
     /* border: 1px solid #000; */
 }
 
-.loginBG {
-    width: calc(100% - 20px);
-    height: calc(100% - 20px);
-    margin: 10px;
-    background: #eef2f3;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px #16776f;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
 @media screen and (max-width:680px) { 
     .articleArea {
         width: 100%;
+    }
+    .title {
+        font-size: 5vw;
     }
     .loginArea {
         width: 100%;
