--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -12,11 +12,11 @@
 }
 
 .title {
-    margin: 0 0.5rem;
+    margin: 0.2rem 0.5rem;
     display: inline-block;
 }
 
 .icon {
     float: right;
-    margin: 0.3rem 1.5rem;
+    margin: 0.4rem 1rem 0.1rem;
 }
