--- a/styles/addBookmarkModal.module.css
+++ b/styles/addBookmarkModal.module.css
@@ -29,6 +29,7 @@
 }
 
 .innerDiv {
+    position: relative;
     width: 50%;
     min-width: 320px;
     padding: 1rem 0;
@@ -106,6 +107,37 @@
     opacity: 0.8;
 }
 .submit:hover {
+    opacity: 1;
+}
+
+.closebtn {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 25px;
+    height: 25px;
+    margin: 0.5rem;
+    border-radius: 50%;
+    background: #16776f;
+    color: #eef2f3;
+    text-align: center;
+    cursor: pointer;
+    font-size: 1.3rem;
+}
+
+.changeBtn {
+    display: block;
+    width: 100%;
+    margin: auto;
+    padding: 1rem;
+    background: #16776f;
+    color: #eef2f3;
+    text-align: center;
+    border-radius: 5px;
+    float: left;
+    opacity: 0.9;
+}
+.changeBtn:hover {
     opacity: 1;
 }
 
