--- a/styles/addBookmarkModal.module.css
+++ b/styles/addBookmarkModal.module.css
@@ -123,6 +123,10 @@
     text-align: center;
     cursor: pointer;
     font-size: 1.3rem;
+    opacity: 0.8;
+}
+.closebtn:hover {
+    opacity: 1;
 }
 
 .changeBtn {
