--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -19,6 +19,10 @@
     display: inline-block;
 }
 
+.search {
+    float: right;
+    
+}
 .icon {
     float: right;
     margin: 0.4rem 1rem 0.1rem;
