--- a/styles/user.module.css
+++ b/styles/user.module.css
@@ -6,3 +6,23 @@
     flex-wrap: wrap;
     width: 100%;
 }
+
+.search {
+    position: fixed;
+    top: 0rem;
+    right: 5rem;
+    width: 50%;
+    max-width: 400px;
+    z-index: 10000;
+}
+
+@media screen and (max-width:680px) { 
+    .search {
+        position: fixed;
+        top: 0rem;
+        right: 5rem;
+        width: 60%;
+        max-width: 400px;
+        z-index: 10000;
+    }
+}
