--- a/styles/globalsearch.module.css
+++ b/styles/globalsearch.module.css
@@ -3,8 +3,15 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    width: 100vw;
-    height: 80vh;
+    width: 100%;
+}
+.resultContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    /* align-items: flex-start; */
+    flex-wrap: wrap;
+    width: 100%;
 }
 .searchContainer {
     width: 100%;
@@ -16,11 +23,12 @@
 .searchbox {
     width: 50%;
     height: 2rem;
+    margin-right: 1rem;
 }
 
 .btn {
     height: 2rem;
-    margin: 1rem;
+    margin: 1rem 0;
     padding: 0 2rem;
     background: #16776f;
     line-height: 2rem;
@@ -33,4 +41,11 @@
 }
 .btn:hover {
     opacity: 1;
+}
+
+@media screen and (max-width:680px) { 
+    .searchbox {
+        width: 65%;
+        height: 2rem;
+    }
 }
