--- a/styles/usericon.module.css
+++ b/styles/usericon.module.css
@@ -2,6 +2,24 @@
     position: relative;
 
 }
+.icon {
+    position: relative;
+    margin: 0.2rem 0;
+}
+.icon:hover {
+    border-radius: 10px;
+    box-shadow: inset 0px 0px 10px #16776f;
+}
+.iconMenu {
+    color: #eef2f3;
+    text-shadow: 0px 0px 2px #16776f;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
 
 .modal {
     position: absolute;
