--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -9,8 +9,7 @@
 .articleArea {
     position: relative;
     width: calc(100% - 350px);
-    height: 90vh;
-    /* border: 1px solid #000; */
+    padding: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -30,22 +29,17 @@
 
 .loginArea {
     width: 350px;
-    height: 90vh;
-    /* border: 1px solid #000; */
 }
 
-.loginBG {
-    width: calc(100% - 20px);
-    height: calc(100% - 20px);
-    margin: 10px;
-    background: #eef2f3;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px #16776f;
+.loginDiv {
+    position: fixed;
+    top: 20%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
+
 
 @media screen and (max-width:680px) { 
     .articleArea {
@@ -53,5 +47,13 @@
     }
     .loginArea {
         width: 100%;
+    }
+    .loginDiv {
+        position: relative;
+        margin-bottom: 10rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 }
