--- a/styles/howto.module.css
+++ b/styles/howto.module.css
@@ -4,10 +4,26 @@
 
 .innerContainer {
     width: 100%;
-    max-width: 650px;
-    margin: 0 auto;
+    max-width: 680px;
+    margin: 5rem auto;
     text-align: center;
 }
 .innerContainer ul {
     list-style: none;
 }
+.list {
+    margin: 5rem 0;
+}
+.innerContainer p {
+    margin-top: 2rem;
+}
+
+.imgBox {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
