--- a/styles/howto.module.css
+++ b/styles/howto.module.css
@@ -27,3 +27,14 @@
     flex-wrap: wrap;
 }
 
+.img {
+    width: 90%;
+    min-width: 300px;
+}
+
+.rowimg {
+    width: 45%;
+    min-width: 300px;
+    margin: 5px;
+}
+
