--- a/styles/addBookmarkModal.module.css
+++ b/styles/addBookmarkModal.module.css
@@ -99,9 +99,9 @@
     margin: 2rem 0rem 1rem;
     background: #16776f;
     color: #eef2f3;
-    border: 1px solid #000000;
+    border: 1px solid #16776f;
     border-radius: 5px;
-    box-shadow: 0px 0px 5px #16776f;
+    box-shadow: 0px 2px 5px #16776f;
     opacity: 0.8;
 }
 .submit:hover {
