add count function

--- a/styles/card.module.css
+++ b/styles/card.module.css
@@ -36,6 +36,9 @@
 .btnDiv {
     display: inline-block;
     width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
 }
 
 .btnDivinner {
